// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menuSelect render renders correctly 1`] = `
<HeaderFooter-AutoHide
  canRefine={true}
  cssClasses={
    Object {
      "footer": "ais-menu-select--footer",
      "header": "ais-menu-select--header",
      "option": "ais-menu-select--option",
      "root": "ais-menu-select",
      "select": "ais-menu-select--select",
    }
  }
  items={
    Array [
      Object {
        "label": "foo",
        "value": undefined,
      },
      Object {
        "label": "bar",
        "value": undefined,
      },
    ]
  }
  refine={[Function]}
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "{{label}} ({{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}})",
        "seeAllOption": "See all",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
        "seeAllOption": false,
      },
    }
  }
/>
`;

exports[`menuSelect render renders transformed items correctly 1`] = `
<HeaderFooter-AutoHide
  canRefine={true}
  cssClasses={
    Object {
      "footer": "ais-menu-select--footer",
      "header": "ais-menu-select--header",
      "option": "ais-menu-select--option",
      "root": "ais-menu-select",
      "select": "ais-menu-select--select",
    }
  }
  items={
    Array [
      Object {
        "label": "foo",
        "transformed": true,
        "value": undefined,
      },
      Object {
        "label": "bar",
        "transformed": true,
        "value": undefined,
      },
    ]
  }
  refine={[Function]}
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "{{label}} ({{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}})",
        "seeAllOption": "See all",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
        "seeAllOption": false,
      },
    }
  }
/>
`;
